<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/app_margin_medium"
    app:cardCornerRadius="16dp"
    app:cardElevation="@dimen/app_margin_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_ingredient_name"
            style="@style/card_pokemon_title_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/app_margin_medium"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="138dp"
            tools:text="Apple"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_ingredient_title_height"
            style="@style/card_pokemon_medium_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/app_margin_medium"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/card_pokemon_aisle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_ingredient_image"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_ingr_aisle"
            style="@style/card_pokemon_medium_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tv_ingredient_title_height"
            app:layout_constraintTop_toTopOf="@+id/tv_ingredient_title_height"
            tools:text="qwerty" />


        <ImageView
            android:id="@+id/iv_ingredient_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginEnd="4dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ingredient_name"
            tools:src="@drawable/no" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin_medium"
            android:hint="@string/hint_text_input"
            app:layout_constraintTop_toBottomOf="@+id/tv_ingredient_title_height">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:id="@+id/tv_pokemon_title_forms"-->
<!--            style="@style/card_pokemon_medium_title_text_style"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="@dimen/app_margin_medium"-->
<!--            android:text="@string/card_pokemon_forms"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/iv_ingredient_menu" />-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/rcv_pokemon_forms"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/app_margin_medium"-->
<!--            android:layout_marginBottom="@dimen/app_margin_medium"-->
<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tv_pokemon_title_forms"-->
<!--            tools:itemCount="3"-->
<!--            tools:listitem="@layout/card_item_pokemon_forms" />-->


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_card_add_in_favorite"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin_medium"
            android:text="@string/card_btn_favorite_add"
            android:textColor="@color/red"
            app:boxStrokeWidth="@dimen/material_button_stroke_width"
            app:cornerRadius="@dimen/material_button_corner_radius"
            app:icon="@drawable/ic_baseline_food_bank_24"
            app:iconPadding="-24dp"
            app:iconTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField"
            app:rippleColor="@color/red"
            app:strokeColor="@color/red" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>